kubernetes/apps/production/finance/finance-vis/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns/is-internal: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure-int"
  name: finance-vis
spec:
  ingressClassName: traefik
  rules:
    - host: &host "finance-vis.${SECRET_DOMAIN}"
  tls:
    - hosts:
        - *host
