kubernetes/apps/production/finance/finance-vis/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: finance-vis-authentik-ingress-route
spec:
  entryPoints:
    - websecure-int
  routes:
    - kind: Rule
      match: Host(`finance-vis.${SECRET_DOMAIN}`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: networking
      services:
        - kind: Service
          name: finance-vis
          namespace: finance
          port: 3000
    - kind: Rule
      match: "Host(`finance-vis.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
